Version 1.4.0:


Version 1.3.6:
	Added Spanish translation
		- Thanks to Maxpower for translating
	Fixed YouTube command not matching youtu.be URLs
	Added form reset support
	Added autoExpand option
	Fixed bug related to inserting BBCodes in source mode when textarea is empty.
		- Thanks to Martec for reporting
	Fixed stripQuotes bug
		- Thanks to Maxpower for reporting
	Fixed destory() to stop memory leak
	Fixed iOS bug with content overflowing the container
	Fixed font size BBCode bug with WebOS browser
	Added blur() function
	Fixed list bug where newlines from the end would be removed
		- Thanks to Birkoff Keren for reporting
	Fixed whitespace removal bug causing some whitespace to be left.
		- Thanks to Martec for reporting
	Fixed val() helper function bug returning HTML when in source mode.
		- Thanks to Maxpower for reporting
	Fixed bug with IE compatibility modes "Quirks" and "IE 7" causing new lines
		not to show.

Version 1.3.5:
	Fixed bug in FF making pasting via right click difficult when empty
		- Thanks to Nibogo2 for reporting
	Added readonly method and option
	Added expandToContent method
	Reorgernised themes to their own directory.
	Changed themes to be in .less format and added to build file
	Added modern, office-toolbar and office themes
	Added autofocus option
	Added a roadmap to the GitHub wiki
	Added height and width methods
	Added method to check for WYSIWYG support
	Changed so that by default the editor won't start in browsers
		that do not support WYSIWYG editing (old mobile browsers)
	Added rtl option along with rtl & ltr commands
	Added id option
	Added sourceMode, val, insertText and insert methods
	Fixed quote bug where author from nested quotes would be removed
	Added Estonian language file
		- Thanks to Rivo for translating
	Fixed bug with dom.fixNesting when fixing certain tags
	Improve adding/updating/removing of commands and BBCodes
	Fixed bug causing elements that are styled with diplay: block to be treated